--- a/bank-charts/templates/secret.yaml
+++ b/bank-charts/templates/secret.yaml
@@ -1,8 +1,8 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: bank-db-secret
-type: Opaque
-data:
-  password: cG9zdGdyZXNxbA==
-  username: cG9zdGdyZXNxbA==
+#apiVersion: v1
+#kind: Secret
+#metadata:
+#  name: bank-db-secret
+#type: Opaque
+#data:
+#  password: cG9zdGdyZXNxbA==
+#  username: cG9zdGdyZXNxbA==
