--- a/bank-charts/values.yaml
+++ b/bank-charts/values.yaml
@@ -35,7 +35,7 @@ accounts:
   config:
     # --- CORRECTED DB URL --- Using '<ReleaseName>-<Alias>' service name convention
     database_url: "jdbc:postgresql://bank-postgresql:5432/bank-db"
-    database_username: "postgresql"
+    database_username: postgresql
     # database_password_secret: "{{ .Release.Name }}-bank-db-postgresql" # Reference to secret created by DB chart
     # database_password_secret_key: "postgresql-password" # Key within the secret
 
@@ -51,7 +51,7 @@ bank-db:
     username: postgresql
     # Use existingSecret or provide password (less secure for production)
     # existingSecret: "{{ .Release.Name }}-bank-db-postgresql" # Name of the secret to use/create
-    password: "changeM3Bank" # Example: Not recommended for production
+#    password: "changeM3Bank" # Example: Not recommended for production
   primary:
     persistence:
       enabled: true
@@ -71,7 +71,7 @@ exchange:
   config:
     # --- CORRECTED DB URL --- Using '<ReleaseName>-<Alias>' service name convention
     database_url: "jdbc:postgresql://exchange-postgresql:5432/exchange-db"
-    database_username: "postgresql"
+    database_username: postgresql
     # database_password_secret: "{{ .Release.Name }}-exchange-db-postgresql" # Reference to secret created by DB chart
     # database_password_secret_key: "postgresql-password" # Key within the secret
 
@@ -87,7 +87,7 @@ exchange-db:
     username: postgresql
     # Use existingSecret or provide password (less secure for production)
     # existingSecret: "{{ .Release.Name }}-exchange-db-postgresql" # Name of the secret to use/create
-    password: "changeM3Bank" # Example: Not recommended for production
+#    password: "changeM3Bank" # Example: Not recommended for production
   primary:
     persistence:
       enabled: true
