feat: обновление helm и readme

--- a/bank-charts/charts/exchange/Chart.yaml
+++ b/bank-charts/charts/exchange/Chart.yaml
@@ -22,3 +22,10 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.0.0"
+
+dependencies:
+  - name: exchange-postgresql
+    version: latest
+    repository: bitnami
+    alias: exchange-db
+    condition: exchange-db.enabled
