--- a/bank-charts/charts/accounts/Chart.yaml
+++ b/bank-charts/charts/accounts/Chart.yaml
@@ -22,3 +22,11 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.0.0"
+
+dependencies:
+  # Subchart for bank DB
+  - name: postgresql
+    version: latest
+    repository: bitnami
+    alias: bank-db
+    condition: bank-db.enabled
