--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,7 +2,12 @@ pipeline {
   agent any
 
   environment {
-    commit_hash = sh(script: 'git rev-parse --short HEAD', returnStdout: true).trim()
+    DOCKER_REGISTRY = credentials('DOCKER_REGISTRY')
+    DB_PASSWORD     = credentials('DB_PASSWORD')
+    GITHUB_USERNAME = credentials('GITHUB_USERNAME')
+    DB_NAME         = 'bank-db'
+    DB_USER         = 'postgresql'
+    IMAGE_TAG       = "${env.BUILD_NUMBER}"
   }
 
   stages {
@@ -36,10 +41,132 @@ pipeline {
       }
     }
 
-    stage('deploy') {
+    stage('Push Docker Images') {
       steps {
-        sh 'kubectl delete deployment bank-practicum --ignore-not-found'
-        sh 'kubectl create deployment bank-practicum'
+        withCredentials([string(credentialsId: 'GHCR_TOKEN', variable: 'GHCR_TOKEN')]) {
+          sh """
+          echo \$GHCR_TOKEN | docker login ghcr.io -u ${GITHUB_USERNAME} --password-stdin
+          docker push /accounts:latest
+          docker push /blocker:latest
+          docker push /cash:latest
+          docker push /exchange:latest
+          docker push /exchange-generator:latest
+          docker push /front-ui:latest
+          docker push /notifications:latest
+          docker push /transfer:latest
+          """
+        }
+      }
+    }
+
+    stage('Install PostgreSQL to TEST') {
+      steps {
+        sh """
+          helm repo add bitnami https://charts.bitnami.com/bitnami
+          helm repo update
+          helm upgrade --install postgres bitnami/postgresql \
+            --namespace test --create-namespace \
+            --set auth.database=${DB_NAME} \
+            --set auth.username=${DB_USER} \
+            --set auth.password=${DB_PASSWORD}
+        """
+      }
+    }
+
+    stage('Create DB Secrets for TEST') {
+      steps {
+        sh """
+          kubectl create secret generic bank-db \
+            --from-literal=password=${DB_PASSWORD} \
+            -n test --dry-run=client -o yaml | kubectl apply -f -
+
+          kubectl create secret generic exchange-db \
+            --from-literal=password=${DB_PASSWORD} \
+            -n test --dry-run=client -o yaml | kubectl apply -f -
+        """
+      }
+    }
+
+    stage('Helm Deploy to TEST') {
+      steps {
+        sh """
+          helm upgrade --install accounts bank-charts/charts/accounts \
+            --namespace test --create-namespace \
+            --set image.repository=${DOCKER_REGISTRY}/accounts \
+            --set image.tag=${IMAGE_TAG} \
+            --set ingress.enabled=true \
+            --set ingress.hosts[0].host=customer.test.local \
+            --set ingress.hosts[0].paths[0].path="/" \
+            --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
+
+          helm upgrade --install blocker bank-charts/charts/blocker \
+            --namespace test --create-namespace \
+            --set image.repository=${DOCKER_REGISTRY}/blocker \
+            --set image.tag=${IMAGE_TAG} \
+            --set ingress.enabled=true \
+            --set ingress.hosts[0].host=customer.test.local \
+            --set ingress.hosts[0].paths[0].path="/" \
+            --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
+
+          helm upgrade --install cash bank-charts/charts/cash \
+            --namespace test --create-namespace \
+            --set image.repository=${DOCKER_REGISTRY}/cash \
+            --set image.tag=${IMAGE_TAG} \
+            --set ingress.enabled=true \
+            --set ingress.hosts[0].host=customer.test.local \
+            --set ingress.hosts[0].paths[0].path="/" \
+            --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
+
+          helm upgrade --install exchange bank-charts/charts/exchange \
+            --namespace test --create-namespace \
+            --set image.repository=${DOCKER_REGISTRY}/exchange \
+            --set image.tag=${IMAGE_TAG} \
+            --set ingress.enabled=true \
+            --set ingress.hosts[0].host=customer.test.local \
+            --set ingress.hosts[0].paths[0].path="/" \
+            --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
+
+          helm upgrade --install exchange-generator bank-charts/charts/exchange-generator \
+            --namespace test --create-namespace \
+            --set image.repository=${DOCKER_REGISTRY}/exchange-generator \
+            --set image.tag=${IMAGE_TAG} \
+            --set ingress.enabled=true \
+            --set ingress.hosts[0].host=customer.test.local \
+            --set ingress.hosts[0].paths[0].path="/" \
+            --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
+
+          helm upgrade --install front-ui bank-charts/charts/front-ui \
+            --namespace test --create-namespace \
+            --set image.repository=${DOCKER_REGISTRY}/front-ui \
+            --set image.tag=${IMAGE_TAG} \
+            --set ingress.enabled=true \
+            --set ingress.hosts[0].host=customer.test.local \
+            --set ingress.hosts[0].paths[0].path="/" \
+            --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
+
+          helm upgrade --install notifications bank-charts/charts/notifications \
+            --namespace test --create-namespace \
+            --set image.repository=${DOCKER_REGISTRY}/notifications \
+            --set image.tag=${IMAGE_TAG} \
+            --set ingress.enabled=true \
+            --set ingress.hosts[0].host=customer.test.local \
+            --set ingress.hosts[0].paths[0].path="/" \
+            --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
+
+          helm upgrade --install transfer bank-charts/charts/transfer \
+            --namespace test --create-namespace \
+            --set image.repository=${DOCKER_REGISTRY}/transfer \
+            --set image.tag=${IMAGE_TAG} \
+            --set ingress.enabled=true \
+            --set ingress.hosts[0].host=customer.test.local \
+            --set ingress.hosts[0].paths[0].path="/" \
+            --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
+        """
+      }
+    }
+    stage('Manual Approval for PROD') {
+      steps {
+        input message: 'Deploy to PROD environment?', ok: 'Yes, deploy'
       }
     }
   }
