--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
   jenkins:
-    image: jenkins/jenkins:lts
-    build: ../jenkins
+    build: .
     container_name: jenkins
     user: root
     env_file:
@@ -14,3 +13,7 @@ services:
     volumes:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
+      - ${KUBECONFIG_PATH}:/root/.kube/config
+
+volumes:
+  jenkins_home:
