feat: добавлена отдельная конфигурация для dev

--- a/notifications/src/main/resources/application.yml
+++ b/notifications/src/main/resources/application.yml
@@ -4,3 +4,12 @@ server:
 spring:
   application:
     name: notifications
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info
+  endpoint:
+    health:
+      show-details: always
