--- a/exchange/src/main/resources/application.yml
+++ b/exchange/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 8084
 
 spring:
+  profiles:
+    active: dev
   application:
     name: exchange
   datasource:
@@ -13,6 +15,12 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  kafka:
+    consumer:
+      bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
+      group-id: rate-consumer
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 
 hibernate:
   dialect: org.hibernate.dialect.PostgreSQLDialect
