--- a/notifications/src/main/resources/application-dev.yml
+++ b/notifications/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ spring:
     name: notifications
   kafka:
     consumer:
-      bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
+      bootstrap-servers: localhost:9092
       group-id: notifications-consumer
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
