--- a/exchange/src/main/resources/application-dev.yml
+++ b/exchange/src/main/resources/application-dev.yml
@@ -18,7 +18,25 @@ spring:
       bootstrap-servers: localhost:9092
       group-id: rate-consumer
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
+      auto-offset-reset: latest
+      enable-auto-commit: false
+      max-poll-records: 10
+    listener:
+      client-id: rate-consumer
+      ack-mode: manual_immediate
+      async-acks: false
+      auto-startup: true
+      concurrency: 1
+      immediate-stop: true
+      missing-topics-fatal: true
+      type: single
+    properties:
+      buffer.memory: 125829120
+      linger.ms: 1
+      max.partition.fetch.bytes: 125829120
+      max.request.size: 125829120
+      session.timeout.ms: 60000
 
 hibernate:
   dialect: org.hibernate.dialect.PostgreSQLDialect
