feat: корректировка серилизатор и десерилизатора. Добавлен kafka producer в accounts

--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
     producer:
       bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.ByteArraySerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer 
       buffer-memory: 125829120
       client-id: ${KAFKA_CLIENT_ID}
       acks: all
@@ -39,6 +39,10 @@ spring:
 hibernate:
   dialect: org.hibernate.dialect.PostgreSQLDialect
   show_sql: true
+
+kafka-topics:
+  out:
+    - ${KAFKA_TOPIC_NOTIFICATIONS}
 
 client:
   notifications:
