--- a/accounts/src/main/resources/application-dev.yml
+++ b/accounts/src/main/resources/application-dev.yml
@@ -17,7 +17,7 @@ spring:
     producer:
       bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.ByteArraySerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer 
       buffer-memory: 125829120
       client-id: "notifications-producer"
       acks: all
@@ -42,6 +42,10 @@ client:
     base-url: http://localhost:8086/notifications
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
+
+kafka-topics:
+  out:
+    - notifications
 
 management:
   endpoints:
