--- a/cash/src/main/resources/application-dev.yml
+++ b/cash/src/main/resources/application-dev.yml
@@ -8,7 +8,7 @@ spring:
     producer:
       bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.ByteArraySerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer 
       buffer-memory: 125829120
       client-id: "notifications-producer"
       acks: all
