--- a/cash/src/main/resources/application.yml
+++ b/cash/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     producer:
       bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.ByteArraySerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer 
       buffer-memory: 125829120
       client-id: ${KAFKA_CLIENT_ID}
       acks: all
