--- a/exchange/src/main/resources/application.yml
+++ b/exchange/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
       bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
       group-id: ${KAFKA_GROUP_ID}
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       auto-offset-reset: latest
       enable-auto-commit: false
       max-poll-records: 10
