--- a/transfer/src/main/resources/application.yml
+++ b/transfer/src/main/resources/application.yml
@@ -26,6 +26,10 @@ spring:
       max.request.size: 125829120
       session.timeout.ms: 60000
 
+kafka-topics:
+  out:
+    - ${KAFKA_TOPIC_OUT_NOTIFICATIONS}
+
 client:
   accounts:
     base-url: ${CLIENT_ACCOUNTS_URL}
@@ -33,10 +37,6 @@ client:
     response-timeout-ms: 1000
   blocker:
     base-url: ${CLIENT_BLOCKER_URL}
-    connect-timeout-ms: 1000
-    response-timeout-ms: 1000
-  notifications:
-    base-url: ${CLIENT_NOTIFICATIONS_URL}
     connect-timeout-ms: 1000
     response-timeout-ms: 1000
   exchange:
