--- a/exchange-generator/src/main/resources/application-dev.yml
+++ b/exchange-generator/src/main/resources/application-dev.yml
@@ -24,8 +24,6 @@ spring:
       max.request.size: 125829120
       session.timeout.ms: 60000
 
-client:
-  exchange:
-    base-url: http://exchange/rates/update
-    connect-timeout-ms: 1000
-    response-timeout-ms: 1000
+kafka-topics:
+  out:
+    - rate
