--- a/exchange/src/main/resources/application-dev.yml
+++ b/exchange/src/main/resources/application-dev.yml
@@ -38,6 +38,10 @@ spring:
       max.request.size: 125829120
       session.timeout.ms: 60000
 
+kafka-topics:
+  in:
+    - rate
+
 hibernate:
   dialect: org.hibernate.dialect.PostgreSQLDialect
   show_sql: true
