--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,6 @@
+volumes:
+  kafka_data:
+
 services:
   front-ui-service:
     build:
@@ -80,3 +83,25 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8087:8087"
+
+  kafka:
+    image: apache/kafka:4.0.0
+    hostname: kafka
+    container_name: kafka
+    ports:
+      - "9092:9092"
+      - "9093:9093"
+    environment:
+      - KAFKA_ENABLE_KRAFT=yes
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_BROKER_ID=1
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
+      - KAFKA_KRAFT_CLUSTER_ID=abcdef1234567890
+      - ALLOW_PLAINTEXT_LISTENER=yes
+
+    volumes:
+      - kafka_data:/bitnami/kafka
