feat: Добавление конфигурации для кафка в helm

--- a/bank-charts/charts/accounts/values.yaml
+++ b/bank-charts/charts/accounts/values.yaml
@@ -83,6 +83,9 @@ tolerations: []
 
 affinity: {}
 
+kafka:
+  bootstrapServers: ""
+
 config:
   database_url: "jdbc:postgresql://{{ .Release.Name }}-bank-db:5432/bank-db"
   database_username: "postgresql"
