--- a/bank-charts/charts/exchange/templates/deployment.yaml
+++ b/bank-charts/charts/exchange/templates/deployment.yaml
@@ -60,6 +60,8 @@ spec:
                 secretKeyRef:
                   name: {{ .Release.Name }}-exchange-db
                   key: password
+            - name: KAFKA_BOOTSTRAP_SERVERS
+              value: {{ .Values.kafka.bootstrapServers | quote }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
