--- a/bank-charts/charts/notifications/templates/deployment.yaml
+++ b/bank-charts/charts/notifications/templates/deployment.yaml
@@ -54,6 +54,9 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "notifications.fullname" . }}
+          env:
+            - name: KAFKA_BOOTSTRAP_SERVERS
+              value: {{ .Values.kafka.bootstrapServers | quote }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
