--- a/accounts/src/main/resources/application-dev.yml
+++ b/accounts/src/main/resources/application-dev.yml
@@ -20,9 +20,9 @@ spring:
       value-serializer: org.apache.kafka.common.serialization.StringSerializer 
       buffer-memory: 125829120
       client-id: "notifications-producer"
-      acks: all
+      acks: 0
       batch-size: 1
-      retries: 3
+      retries: 0
       properties:
         linger.ms: 1
         max.request.size: 125829120
@@ -32,6 +32,7 @@ spring:
       max.partition.fetch.bytes: 125829120
       max.request.size: 125829120
       session.timeout.ms: 60000
+      enable.idempotence: false
 
 hibernate:
   dialect: org.hibernate.dialect.PostgreSQLDialect
