--- a/exchange/src/main/resources/application-dev.yml
+++ b/exchange/src/main/resources/application-dev.yml
@@ -20,7 +20,8 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       auto-offset-reset: latest
-      enable-auto-commit: false
+      enable-auto-commit: true
+      auto-commit-interval: 5000
       max-poll-records: 10
     listener:
       client-id: rate-consumer
