--- a/bank-charts/charts/exchange-generator/templates/configmap.yaml
+++ b/bank-charts/charts/exchange-generator/templates/configmap.yaml
@@ -10,3 +10,7 @@ data:
   {{- range $key, $value := .Values.config }}
   {{ $key }}: {{ $value | quote }}
   {{- end }}
+
+  KAFKA_BOOTSTRAP_SERVERS: { { .Values.config.kafka.bootstrapServers | quote } }
+  KAFKA_CLIENT_ID: { { .Values.config.kafka.clientId | quote } }
+  KAFKA_TOPIC_OUT_RATE: { { .Values.config.kafka.topicOutRate | quote } }
