--- a/bank-charts/charts/notifications/values.yaml
+++ b/bank-charts/charts/notifications/values.yaml
@@ -84,3 +84,6 @@ affinity: {}
 
 kafka:
   bootstrapServers: ""
+  groupId: "notifications-consumer"
+  clientId: "notifications"
+  topicInNotifications: "notifications"
