--- a/bank-charts/charts/cash/values.yaml
+++ b/bank-charts/charts/cash/values.yaml
@@ -96,6 +96,8 @@ affinity: {}
 
 kafka:
   bootstrapServers: ""
+  clientId: "cash"
+  topicOutNotifications: "notifications"
 
 config:
   accounts_url: "http://accounts/accounts"
