--- a/bank-charts/charts/exchange/templates/configmap.yaml
+++ b/bank-charts/charts/exchange/templates/configmap.yaml
@@ -23,3 +23,7 @@ data:
 
   # Example: Include other config defined in values.yaml
   # OTHER_CONFIG_PARAM: {{ .Values.config.some_other_config | quote }}
+  KAFKA_BOOTSTRAP_SERVERS: {{ .Values.config.kafka.bootstrapServers | quote }}
+  KAFKA_GROUP_ID: {{ .Values.config.kafka.groupId | quote }}
+  KAFKA_CLIENT_ID: {{ .Values.config.kafka.clientId | quote }}
+  KAFKA_TOPIC_IN_RATE: {{ .Values.config.kafka.topicInRate | quote }}
