--- a/bank-charts/charts/exchange/values.yaml
+++ b/bank-charts/charts/exchange/values.yaml
@@ -83,6 +83,9 @@ affinity: {}
 
 kafka:
   bootstrapServers: ""
+  groupId: "rate-consumer"
+  clientId: "exchange"
+  topicInRate: "rate"
 
 config:
   database_url: "jdbc:postgresql://{{ .Release.Name }}-exchange-db:5432/exchange-db"
