--- a/bank-charts/charts/transfer/templates/configmap.yaml
+++ b/bank-charts/charts/transfer/templates/configmap.yaml
@@ -17,3 +17,7 @@ data:
   CLIENT_BLOCKER_URL: {{ .Values.config.blocker_url | quote }}
   #URL exchange service
   CLIENT_EXCHANGE_URL: {{ .Values.config.exchange_url | quote }}
+
+  KAFKA_BOOTSTRAP_SERVERS: {{ .Values.config.kafka.bootstrapServers | quote }}
+  KAFKA_CLIENT_ID: {{ .Values.config.kafka.clientId | quote }}
+  KAFKA_TOPIC_OUT_NOTIFICATIONS: {{ .Values.config.kafka.topicOutNotifications | quote }}
