--- a/exchange-generator/src/main/resources/application-dev.yml
+++ b/exchange-generator/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer 
       buffer-memory: 125829120
-      client-id: "rate-producer"
+      client-id: "exchange-generator"
       acks: 0
       batch-size: 1
       retries: 0
